# PRATICA-4-INTERFACE-DE-COMUNICA-O-I2C-E-CONVERSOR-A-D

./: CMakeLists.txt  README.md  diagram.json  font.h  projeto_4.c  ssd1306.c  ssd1306.h  wokwi.toml
