# Generated Cmake Pico project file

cmake_minimum_required(VERSION 3.13)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Initialise pico_sdk from installed location
if(WIN32)
    set(USERHOME $ENV{USERPROFILE})
else()
    set(USERHOME $ENV{HOME})
endif()
set(sdkVersion 2.2.0)
set(toolchainVersion 14_2_Rel1)
set(picotoolVersion 2.2.0-a4)
set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
if (EXISTS ${picoVscode})
    include(${picoVscode})
endif()
# ====================================================================================
set(PICO_BOARD pico_w CACHE STRING "Board type")

# Pull in Raspberry Pi Pico SDK (must be before project)
include(pico_sdk_import.cmake)

project(projeto_4 C CXX ASM)

# Initialise the Raspberry Pi Pico SDK
pico_sdk_init()

# Add executable. Default name is the project name, version 0.1
# ADIÇÃO DA BIBLIOTECA: ssd1306.c foi adicionado aqui para compilar junto com o main
add_executable(projeto_4 
    projeto_4.c 
    ssd1306.c 
)

pico_set_program_name(projeto_4 "projeto_4")
pico_set_program_version(projeto_4 "0.1")

# Enable output over UART/USB
pico_enable_stdio_uart(projeto_4 1)
pico_enable_stdio_usb(projeto_4 1)

# Add the standard library to the build
target_link_libraries(projeto_4
        pico_stdlib)

# Add the standard include files to the build
target_include_directories(projeto_4 PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
)

# Add hardware libraries
target_link_libraries(projeto_4 
        hardware_adc
        hardware_i2c
        )

pico_add_extra_outputs(projeto_4)